Adds: views/quizzes/index.html.erb - images added to quiz

--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -8,8 +8,9 @@
 
     <h1>Welcome to FlickQuiz</h1>
 
-    <div id='title'></div>
-    <div id='director'></div>
+    Film: <div id='title'></div></br>
+    Director: <div id='director'></div></br>
+    <div id='poster'></div></br>
 
     Which year: <input id="yearGuess" type="text" name="yearGuess">
     <input onclick="submitAnswer()"type="submit">
