Adds: Additional films added to array

--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -18,5 +18,7 @@
 
     <div id='result'></div>
 
+    <input id='reset' type='button' value='Play Again' onClick='window.location.reload()'>
+
   </body>
 </html>
