--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,22 +7,8 @@
       <%= csrf_meta_tags %>
   </head>
     <body>
-      <div id="main-container" class="container">
-        <div class="row">
-          <div class="col-xs-3">
-            <% if user_signed_in? %>
-                <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: 'btn btn-success' %>
-                <td><%= link_to "New Game", new_quiz_path, 'btn btn-primary btn-xs' %></td>
-            <% else %>
-                <%= link_to "Sign in", new_user_session_path, class: 'btn btn-success' %>
-                <%= link_to "Sign up", new_user_registration_path %>
-            <% end %>
-                <%= link_to "Home", quizzes_path %>
-          </div>
-            <div class="col-xs-9">
-              <%= yield %>
-            </div>
-          </div>
-        </div>
+
+      <%= render 'shared/navbar' %>
+      <%= yield %>
     </body>
 </html>
