Adds: app/views/quizzes/index.html.erb - jQuery / hide new game button / display answer

--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js'></script>
     <script src="./assets/application.js"></script>
     <script src="./assets/flickQuiz.js"></script>
   </head>
@@ -18,7 +19,9 @@
 
     <div id='result'></div>
 
-    <input id='reset' type='button' value='Play Again' onClick='window.location.reload()'>
+    <div id='answer'></div>
+
+    <input id='reset' type='button' value='Play Again' onClick='newFilm()'>
 
   </body>
 </html>
