adds scoring logic. tests needed

--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,4 +1,15 @@
 <h1>Welcome to FlickQuiz</h1>
-<%= link_to "New Quiz", quizzes_path, method: :post %></br>
-<%= @quiz %>
-<%= @score %>
+
+<% if user_signed_in? %>
+  <% if @score == nil %>
+    Total score: 0
+  <% else %> 
+    Total score: <%= @score %>
+  <% end %>
+<% end %>
+
+<% if !@quiz %>
+  <%= link_to "New Quiz", quizzes_path, method: :post %></br>
+<% else %> 
+  <% @quiz %>  
+<% end %>
