--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -7,23 +7,27 @@
   <body>
     <div id='main-container' class='container'>
       <div class="row">
-        <div class="col-xs-3 col-lg-2">
-          <h1>Welcome to FlickQuiz</h1>
-
-            Film: <div id='title'></div></br>
-            Director: <div id='director'></div></br>
-            <div id='poster' class='col-xs-6 col-md-3'>
-            <a href="www.imdb.com" class="thumbnail"></a>
-            </div>
-            </br>
-            <div class="form-group">
-            Which year: <input id="yearGuess" type="text" name="yearGuess" class="form-control">
-            <input onclick="submitAnswer()"type="submit">
-            <input type="hidden" id="yearAnswer" name="yearAnswer" value="yearAnswer"/>
+        <div class='col-md-3'>
           </div>
-          <div id='result'></div>
-          <input id='reset' type='button' value='Play Again' onClick='window.location.reload()'>
-        </div>
+            <div class="col-md-6 row text-center jumbotron">
+              <h1>Welcome to FlickQuiz</h1>
+                <h5>Film: <div id='title'></div></h5></br>
+                <h5>Director: <div id='director'></div></h5></br>
+                  <div id='poster'class='img-thumbnail' ></div>
+                  <br>
+                    <div class="form-group">
+                  <br>                        
+                  <h5>Which year: <br> <input id="yearGuess" type="text" name="yearGuess" class="form-control-static"></h5>
+
+                    <br>
+                    <input onclick="submitAnswer()"type="submit">
+                    <input type="hidden" id="yearAnswer" name="yearAnswer" value="yearAnswer"/>
+                      <div id='result'></div>
+                      <br>
+                    <input id='reset' type='button' value='Play Again' onClick='window.location.reload()'>
+                    </div>
+            </div>
+          <div class="col-md-3"></div>
       </div>
     </div>
   </body>
