--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,27 @@
-<html>
- <body>
-      <div id="main-container" class="container">
-        <div class="row">
-          <div class="col-xs-3">
-            <% if user_signed_in? %>
-                <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: 'btn btn-info' %>
-                <td><%= link_to "New Game", new_quiz_path, 'btn btn-success btn-lg' %></td>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a <%= link_to "Home", quizzes_path, class: 'navbar-brand' %>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><span class="sr-only">(current)</span></a></li>
+        <% if user_signed_in? %>
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
             <% else %>
-                <%= link_to "Sign in", new_user_session_path, class: 'btn btn-info' %>
-                <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-info' %>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
             <% end %>
-                <%= link_to "Home", quizzes_path, class: 'btn btn-primary'  %>
-          </div>
-            <div class="col-xs-9">
-               </div>
-          </div>
-        </div>
-    </body>
-</html>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
