Home page paths; JS files written in jQuery

--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -3,5 +3,8 @@
 
     <h1>Welcome to FlickQuiz</h1>
 
+    <%= link_to 'Guess The Year', quiz_year_path %>
+    <%= link_to 'Guess The Film', quiz_film_path %>
+
   </body>
 </html>
