--- a/app/views/quizzes/quiz_film.html.erb
+++ b/app/views/quizzes/quiz_film.html.erb
@@ -2,7 +2,7 @@
   <head>
     <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js'></script>
     <script src="./assets/application.js"></script>
-    <script src="./assets/flickQuiz2.js"></script>
+    <script src="./assets/flickQuiz_film.js"></script>
   </head>
 
   <body>
