--- a/app/views/quizzes/quiz_year.html.erb
+++ b/app/views/quizzes/quiz_year.html.erb
@@ -2,7 +2,7 @@
   <head>
     <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js'></script>
     <script src="./assets/application.js"></script>
-    <script src="./assets/flickQuiz.js"></script>
+    <script src="./assets/flickQuiz_year.js"></script>
   </head>
 
   <body>
