Adds: jQuery styling to flickQuiz_year.js

--- a/app/views/quizzes/quiz_film.html.erb
+++ b/app/views/quizzes/quiz_film.html.erb
@@ -13,10 +13,12 @@
     Year: <div id='year'></div></br>
     Lead actors: <div id='actors'></div></br>
 
-    Which film: <input id="filmGuess" type="text" name="filmGuess">
-    <input onclick="submitAnswer()"type="submit">
-    <input type="hidden" id="filmAnswer" name="filmAnswer" value="filmAnswer"/>
-    <input type="hidden" id="hiddenPoster" name="hiddenPoster" value="hiddenPoster"/>
+    <div id="input">
+      Which film: <input id="filmGuess" type="text" name="filmGuess">
+      <input onclick="submitAnswer()"type="submit">
+      <input type="hidden" id="filmAnswer" name="filmAnswer" value="filmAnswer"/>
+      <input type="hidden" id="hiddenPoster" name="hiddenPoster" value="hiddenPoster"/>
+    </div>
 
     <div id='result'></div>
 
