--- a/app/views/quizzes/quiz_year.html.erb
+++ b/app/views/quizzes/quiz_year.html.erb
@@ -10,13 +10,15 @@
     <h1>Welcome to FlickQuiz</h1>
     <h2>Guess The Year</h2>
 
-    Film: <div id='title'></div></br>
-    Director: <div id='director'></div></br>
+    <div id='title'></div></br>
+    <div id='director'></div></br>
     <div id='poster'></div></br>
 
-    Which year: <input id="yearGuess" type="text" name="yearGuess">
-    <input onclick="submitAnswer()"type="submit">
-    <input type="hidden" id="yearAnswer" name="yearAnswer" value="yearAnswer"/>
+    <div id="input">
+      Which year: <input id="yearGuess" type="text" name="yearGuess">
+      <input onclick="submitAnswer()"type="submit">
+      <input type="hidden" id="yearAnswer" name="yearAnswer" value="yearAnswer"/>
+    </div>
 
     <div id='result'></div>
 
