Adds: jQuery to flickQuiz_film.js

--- a/app/views/quizzes/quiz_film.html.erb
+++ b/app/views/quizzes/quiz_film.html.erb
@@ -10,8 +10,8 @@
     <h1>Welcome to FlickQuiz</h1>
     <h2>Guess The Film</h2>
 
-    Year: <div id='year'></div></br>
-    Lead actors: <div id='actors'></div></br>
+    <div id='year'></div></br>
+    <div id='actors'></div></br>
 
     <div id="input">
       Which film: <input id="filmGuess" type="text" name="filmGuess">
